# jade

./: .gitignore  0.3.0-plan.md  0.4.0-plan.md  0.5.0-plan.md  ACTORS.md  AUDIT.md  CLEANUP.md  CONTRIBUTING.md  Cargo.toml  INFERENCE-AUDIT.md  INFERENCE-REMEDIATION.md  JINN.md  JINN_ALPHA_RELEASE_AUDIT.md  JINN_ALPHA_REMEDIATION.md  JINN_DEV_REPORT.md  REMEDIATION.md  ROADMAP.md  ROADMAP_FINALIZE.md  SECURITY.md  SNIPPET2.md  SNIPPET3.md  SPLIT.md  STORE.md  TYPE-INFERENCE-AUDIT.md  Users.store  VISION.md  a.out  alpha-release-status.md  analysis.md  bench.wal  bootstrap-roadmap.md  bugs  build.rs  clippy.toml  counter.store  cross-language-analysis.md  ddr-plan.md  err.md  f.jn  fallback.md  (+38 more)
benchmarks/: README.md  ackermann.jade  ackermann.jn  actor_fanout.jade  actor_pingpong.jade  actor_single.jade  actor_throughput.jade  alloc_churn.jade  alloc_churn.jn  array_ops.jade  array_ops.jn  channel_throughput.jade  closure_capture.jade  collatz.jade  coroutine_spawn.jade  deep_recursion.jade  deep_recursion.jn  dispatch_vs_direct.jade  dispatch_vs_direct.jn  dispatch_yield.jade  enum_dispatch.jade  fibonacci.jade  gcd_intensive.jade  history.json  hof_pipeline.jade  math_compute.jade  math_compute.jn  matrix_mul.jade  nbody.jade  parallel_actors.jade  parallel_actors.jn  parallel_fib.jade  parallel_pipeline.jade  parallel_pipeline.jn  parallel_sim_block.jade  results.csv  results.json  results_full.json  results_pre_sim.json  select_latency.jade  (+15 more)
ci/: sanitize.sh
docs/: REVIEW_RESPONSE.md  TECHNICAL_DISCOVERY_REVIEW_2026.md  access-semantics-r34-design.md  access-semantics-remediation.md  access-semantics-sprint.md  access-semantics.md  architecture.md  concurrency.md  lsp.md  memory-model.md  stability.md  std.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs  parser.rs  typer.rs
libjn/: assert.jn  compat.jn  complex.jn  ctype.jn  dirent.jn  errno.jn  fcntl.jn  fenv.jn  float.jn  inttypes.jn  iso646.jn  limits.jn  locale.jn  math.jn  mod.jn  pthread.jn  semaphore.jn  setjmp.jn  signal.jn  stdalign.jn  stdarg.jn  stdatomic.jn  stdbool.jn  stddef.jn  stdint.jn  stdio.jn  stdlib.jn  stdnoreturn.jn  string.jn  sys_mman.jn  sys_socket.jn  sys_stat.jn  sys_types.jn  sys_wait.jn  tgmath.jn  threads.jn  time.jn  uchar.jn  unistd.jn  wchar.jn  (+1 more)
review/: 00_index.md  01_methodology.md  02_metrics.md  03_architecture.md  04_lexer.md  05_parser_syntax.md  06_ast_hir.md  07_type_system.md  11_codegen_runtime.md  12_safety_concurrency_stores_stdlib_tooling.md  (+5 more)
(+1338 files in other folders)
