[workspace]

[package]
name = "jadec"
version = "0.0.0"
edition = "2024"
default-run = "jadec"

[[bin]]
name = "jadec"
path = "src/main.rs"

[[bin]]
name = "jadec-lsp"
path = "src/lsp/main.rs"

[dependencies]
inkwell = { version = "0.8", features = ["llvm21-1"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
