[workspace]
exclude = ["fuzz"]

[package]
name = "jinnc"
version = "0.0.0"
edition = "2024"
default-run = "jinnc"

[[bin]]
name = "jinnc"
path = "src/main.rs"

[[bin]]
name = "jinn"
path = "src/bin/jinn.rs"

[[bin]]
name = "jinnc-lsp"
path = "src/lsp/main.rs"

[dependencies]
inkwell = { version = "0.8", features = ["llvm21-1"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2"
lasso = "0.7"
equivalent = "1.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
proptest = "1.5"
